--- a/test/test.html
+++ b/test/test.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>test</title>
-    <script src="../dist/u3.min.js"></script>
+    <script src="../dist/u3.js"></script>
     <script>
-      let u3 = U3.js.createU3({
+      let u3 = U3.createU3({
         keyProvider: '5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3',// private key
         httpEndpoint: 'http://127.0.0.1:8888'
       });
