--- a/test/test.html
+++ b/test/test.html
@@ -5,10 +5,10 @@
     <title>test</title>
     <script src="../dist/u3.js"></script>
     <script>
+
       let u3 = U3.createU3({
-        keyProvider: '5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3',// private key
         httpEndpoint: 'http://127.0.0.1:8888',
-        httpEndpoint_history: "http://127.0.0.1:3000"
+        httpEndpoint_history: 'http://127.0.0.1:3000'
       });
 
       u3.getChainInfo((err, info) => {
