--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,7 @@
 
       let u3 = U3.createU3({
         httpEndpoint: 'http://127.0.0.1:8888',
-        httpEndpoint_history: 'http://127.0.0.1:3000'
+        httpEndpointHistory: 'http://127.0.0.1:3000'
       });
 
       u3.getChainInfo((err, info) => {
